--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <section id="proyectos">
         <h2>Proyectos</h2>
         <div class="proyecto">
-            <h3>Proyecto 1: Nombre del Proyecto</h3>
-            <p>Descripción breve del proyecto.</p>
-            <a href="#">Ver Proyecto</a>
+            <h3>Pagina web de compras</h3>
+            <p>Este proyecto es una página web de compras que permite a los usuarios explorar, ver detalles y comprar productos.</p>
+            <a href="#" id="proyecto1">Ver Proyecto</a>
         </div>
         <div class="proyecto">
-            <h3>Proyecto 2: Nombre del Proyecto</h3>
+            <h3>Página de cuidados de nuestras mascotas</h3>
             <p>Descripción breve del proyecto.</p>
             <a href="#">Ver Proyecto</a>
         </div>
