--- a/index.html
+++ b/index.html
@@ -1,41 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Portafolio</title>
+    <title>Portafolio de Fernanda Valencia</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>¡Hola! Soy Fernanda</h1>
+        <h1>¡Hola! Soy Fernanda Valencia</h1>
         <p>Desarrolladora de Software | Ingeniera en Informática</p>
     </header>
+
+    <section id="acerca">
+        <h2>Acerca de Mí</h2>
+        <p>Estudiante de ingeniería en informática y telecomunicaciones en la Universidad Diego Portales. Tengo habilidades en desarrollo web y manejo de diversos lenguajes de programación. Me adapto rápidamente a distintos entornos de trabajo y tengo experiencia en bases de datos y creación de páginas web. Dispuesta a aprender y aportar en mi equipo.</p>
+    </section>
+
     <section id="habilidades">
         <h2>Habilidades</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>HTML y CSS</li>
-            <li>React</li>
-            <li>Python</li>
+            <li>Lenguajes: Python, JavaScript, Java, C++, SQL</li>
+            <li>Frameworks y Librerías: Node, Express, Angular, Bootstrap, HBS</li>
+            <li>Autenticación y Seguridad: JWT</li>
+            <li>Bases de Datos: PostgreSQL, MongoDB</li>
+            <li>Herramientas de Office: Excel, PowerBi</li>
+            <li>Idiomas: Inglés (Intermedio)</li>
         </ul>
     </section>
+
     <section id="proyectos">
         <h2>Proyectos</h2>
+
         <div class="proyecto">
-            <h3>Pagina web de compras</h3>
-            <p>Este proyecto es una página web de compras que permite a los usuarios explorar, ver detalles y comprar productos.</p>
+            <h3>Sitio Web de Compra y Venta</h3>
+            <p>Página para compra y venta de productos en línea, con roles de usuario y administrador. Permite registrarse, iniciar sesión y eliminar perfil. Conectada a MongoDB y asegurada con JWT. Alojada en AWS EC2.</p>
             <a href="#" id="proyecto1">Ver Proyecto</a>
         </div>
+
         <div class="proyecto">
-            <h3>Página de cuidados de nuestras mascotas</h3>
-            <p>Descripción breve del proyecto.</p>
+            <h3>Sitio Web de Cuidado Animal</h3>
+            <p>Página para ingresar información sobre mascotas, con registro de medicinas, médicos y gestión de cuenta. Conectada a PostgreSQL, permite crear y eliminar perfiles, agregar mascotas, medicamentos y veterinarios.</p>
             <a href="#">Ver Proyecto</a>
         </div>
     </section>
+
     <section id="contacto">
         <h2>Contacto</h2>
-        <p>Correo: tuemail@example.com</p>
+        <p>Ubicación: San Joaquín, Santiago</p>
+        <p>Teléfono: +56 983245549</p>
+        <p>Email: <a href="mailto:fernandavalencia115@gmail.com">fernandavalencia115@gmail.com</a></p>
         <p><a href="https://github.com/ferlmdl">GitHub</a></p>
     </section>
 
