--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 
     <!-- Sección de Perfil -->
     <header>
-        <img src="perfil.png" alt="Foto de Perfil" class="perfil-imagen">
         <h1>Fernanda Valencia</h1>
-        <p>Desarrolladora de Software | Ingeniera en Informática</p>
+        <p>Ingeniera civil en Informática y telecomunicaciones</p>
         <p>Apasionada por el desarrollo web y la innovación tecnológica.</p>
     </header>
 
