--- a/index.html
+++ b/index.html
@@ -24,19 +24,23 @@
     </header>
 
     <!-- Sección de Proyectos -->
-    <section id="projects">
-        <h2>Proyectos Destacados</h2>
-        <div class="proyecto">
-            <h3>Proyecto 1: Página Web de Compras</h3>
-            <p>Una plataforma de compras en línea con autenticación y sistema de roles.</p>
-            <a href="https://github.com/ferlmdl/Desarrollo_web" target="_blank">Ver Proyecto</a>
-        </div>
-        <div class="proyecto">
-            <h3>Proyecto 2: Cuidado de Mascotas</h3>
-            <p>Página para registrar información médica y cuidados de mascotas.</p>
-            <a href="https://github.com/ferlmdl/BDD" target="_blank">Ver Proyecto</a>
-        </div>
-    </section>
+    <section id="proyectos">
+    <h2>Proyectos</h2>
+    <div class="carrusel-container">
+        <div class="carrusel">
+            <div class="proyecto">
+                <h3>Página Web de Compras</h3>
+                <p>Una plataforma de compras en línea con autenticación y sistema de roles.</p>
+                <a href="https://github.com/ferlmdl/Desarrollo_web" target="_blank">Ver Proyecto</a>
+            </div>
+            <div class="proyecto">
+                <h3>Cuidado de Mascotas</h3>
+                <p>Página para registrar información médica y cuidados de mascotas.</p>
+                <a href="https://github.com/ferlmdl/BDD" target="_blank">Ver Proyecto</a>
+    </div>
+    <button id="prev" class="carrusel-button">⟨</button>
+    <button id="next" class="carrusel-button">⟩</button>
+</section>
 
     <!-- Sección de Contacto -->
     <section id="contact">
